--- a/Explanatory_Variables.html
+++ b/Explanatory_Variables.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Exploratory Analysis of Explanatory Variables</title>
+<title>Exploratory Analysis of Health Outcomes</title>
 
 <script src="site_libs/header-attrs-2.18/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -32,13 +32,6 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<script src="site_libs/htmlwidgets-1.5.4/htmlwidgets.js"></script>
-<script src="site_libs/plotly-binding-4.10.1/plotly.js"></script>
-<script src="site_libs/typedarray-0.1/typedarray.min.js"></script>
-<link href="site_libs/crosstalk-1.2.0/css/crosstalk.min.css" rel="stylesheet" />
-<script src="site_libs/crosstalk-1.2.0/js/crosstalk.min.js"></script>
-<link href="site_libs/plotly-htmlwidgets-css-2.11.1/plotly-htmlwidgets.css" rel="stylesheet" />
-<script src="site_libs/plotly-main-2.11.1/plotly-latest.min.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
@@ -278,190 +271,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Exploratory Analysis of Explanatory
-Variables</h1>
+<h1 class="title toc-ignore">Exploratory Analysis of Health
+Outcomes</h1>
 
 </div>
 
 
-<table>
-<thead>
-<tr class="header">
-<th align="left">County</th>
-<th align="right">Number of Superfunds</th>
-<th align="right">Mean Site Score</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">Columbia</td>
-<td align="right">1</td>
-<td align="right">70.710</td>
-</tr>
-<tr class="even">
-<td align="left">Cumberland</td>
-<td align="right">1</td>
-<td align="right">50.000</td>
-</tr>
-<tr class="odd">
-<td align="left">Delaware, Philadelphia</td>
-<td align="right">1</td>
-<td align="right">50.000</td>
-</tr>
-<tr class="even">
-<td align="left">Mercer</td>
-<td align="right">3</td>
-<td align="right">48.643</td>
-</tr>
-<tr class="odd">
-<td align="left">Allegheny</td>
-<td align="right">3</td>
-<td align="right">47.953</td>
-</tr>
-<tr class="even">
-<td align="left">Lehigh</td>
-<td align="right">3</td>
-<td align="right">47.513</td>
-</tr>
-<tr class="odd">
-<td align="left">Northampton</td>
-<td align="right">2</td>
-<td align="right">47.190</td>
-</tr>
-<tr class="even">
-<td align="left">Montour</td>
-<td align="right">1</td>
-<td align="right">46.440</td>
-</tr>
-<tr class="odd">
-<td align="left">Lebanon</td>
-<td align="right">1</td>
-<td align="right">46.250</td>
-</tr>
-<tr class="even">
-<td align="left">Centre</td>
-<td align="right">1</td>
-<td align="right">45.090</td>
-</tr>
-<tr class="odd">
-<td align="left">Carbon</td>
-<td align="right">2</td>
-<td align="right">44.755</td>
-</tr>
-<tr class="even">
-<td align="left">Delaware</td>
-<td align="right">2</td>
-<td align="right">44.170</td>
-</tr>
-<tr class="odd">
-<td align="left">Erie</td>
-<td align="right">2</td>
-<td align="right">44.100</td>
-</tr>
-<tr class="even">
-<td align="left">Montgomery</td>
-<td align="right">17</td>
-<td align="right">43.359</td>
-</tr>
-<tr class="odd">
-<td align="left">Luzerne</td>
-<td align="right">1</td>
-<td align="right">43.160</td>
-</tr>
-<tr class="even">
-<td align="left">Bucks</td>
-<td align="right">8</td>
-<td align="right">42.430</td>
-</tr>
-<tr class="odd">
-<td align="left">Lycoming</td>
-<td align="right">1</td>
-<td align="right">42.240</td>
-</tr>
-<tr class="even">
-<td align="left">Philadelphia</td>
-<td align="right">2</td>
-<td align="right">41.715</td>
-</tr>
-<tr class="odd">
-<td align="left">Adams</td>
-<td align="right">4</td>
-<td align="right">41.132</td>
-</tr>
-<tr class="even">
-<td align="left">Blair</td>
-<td align="right">1</td>
-<td align="right">41.080</td>
-</tr>
-<tr class="odd">
-<td align="left">Mifflin</td>
-<td align="right">1</td>
-<td align="right">40.370</td>
-</tr>
-<tr class="even">
-<td align="left">Lancaster</td>
-<td align="right">2</td>
-<td align="right">39.880</td>
-</tr>
-<tr class="odd">
-<td align="left">Berks</td>
-<td align="right">8</td>
-<td align="right">39.859</td>
-</tr>
-<tr class="even">
-<td align="left">Chester</td>
-<td align="right">9</td>
-<td align="right">39.062</td>
-</tr>
-<tr class="odd">
-<td align="left">Clinton</td>
-<td align="right">1</td>
-<td align="right">38.520</td>
-</tr>
-<tr class="even">
-<td align="left">York</td>
-<td align="right">3</td>
-<td align="right">36.290</td>
-</tr>
-<tr class="odd">
-<td align="left">Franklin</td>
-<td align="right">2</td>
-<td align="right">35.860</td>
-</tr>
-<tr class="even">
-<td align="left">Monroe</td>
-<td align="right">2</td>
-<td align="right">34.965</td>
-</tr>
-<tr class="odd">
-<td align="left">Bradford</td>
-<td align="right">1</td>
-<td align="right">34.790</td>
-</tr>
-<tr class="even">
-<td align="left">Susquehanna</td>
-<td align="right">1</td>
-<td align="right">33.740</td>
-</tr>
-<tr class="odd">
-<td align="left">Crawford</td>
-<td align="right">1</td>
-<td align="right">33.620</td>
-</tr>
-<tr class="even">
-<td align="left">Schuylkill</td>
-<td align="right">1</td>
-<td align="right">31.020</td>
-</tr>
-<tr class="odd">
-<td align="left">Jefferson</td>
-<td align="right">1</td>
-<td align="right">30.220</td>
-</tr>
-</tbody>
-</table>
-<div id="htmlwidget-ca183453cb4426abe4ee" style="width:672px;height:480px;" class="plotly html-widget"></div>
-<script type="application/json" data-for="htmlwidget-ca183453cb4426abe4ee">{"x":{"visdat":{"3ec015cd2e37":["function () ","plotlyVisDat"]},"cur_data":"3ec015cd2e37","attrs":{"3ec015cd2e37":{"x":{},"y":{},"color":{},"colors":"viridis","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"bar"}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"xaxis":{"domain":[0,1],"automargin":true,"categoryorder":"total descending","title":"County","type":"category","categoryarray":["Adams","Allegheny","Berks","Blair","Bradford","Bucks","Carbon","Centre","Chester","Clinton","Columbia","Crawford","Cumberland","Delaware","Delaware, Philadelphia","Erie","Franklin","Jefferson","Lancaster","Lebanon","Lehigh","Luzerne","Lycoming","Mercer","Mifflin","Monroe","Montgomery","Montour","Northampton","Philadelphia","Schuylkill","Susquehanna","York"]},"title":"Mean Superfund Site Score by County ","yaxis":{"domain":[0,1],"automargin":true,"title":"Mean Score"},"hovermode":"closest","showlegend":true},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"data":[{"x":["Adams"],"y":[41.1325],"type":"bar","name":"Adams","marker":{"color":"rgba(68,1,84,1)","line":{"color":"rgba(68,1,84,1)"}},"textfont":{"color":"rgba(68,1,84,1)"},"error_y":{"color":"rgba(68,1,84,1)"},"error_x":{"color":"rgba(68,1,84,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Allegheny"],"y":[47.9533333333333],"type":"bar","name":"Allegheny","marker":{"color":"rgba(71,13,96,1)","line":{"color":"rgba(71,13,96,1)"}},"textfont":{"color":"rgba(71,13,96,1)"},"error_y":{"color":"rgba(71,13,96,1)"},"error_x":{"color":"rgba(71,13,96,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Berks"],"y":[39.85875],"type":"bar","name":"Berks","marker":{"color":"rgba(72,24,106,1)","line":{"color":"rgba(72,24,106,1)"}},"textfont":{"color":"rgba(72,24,106,1)"},"error_y":{"color":"rgba(72,24,106,1)"},"error_x":{"color":"rgba(72,24,106,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Blair"],"y":[41.08],"type":"bar","name":"Blair","marker":{"color":"rgba(72,35,116,1)","line":{"color":"rgba(72,35,116,1)"}},"textfont":{"color":"rgba(72,35,116,1)"},"error_y":{"color":"rgba(72,35,116,1)"},"error_x":{"color":"rgba(72,35,116,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Bradford"],"y":[34.79],"type":"bar","name":"Bradford","marker":{"color":"rgba(71,45,123,1)","line":{"color":"rgba(71,45,123,1)"}},"textfont":{"color":"rgba(71,45,123,1)"},"error_y":{"color":"rgba(71,45,123,1)"},"error_x":{"color":"rgba(71,45,123,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Bucks"],"y":[42.43],"type":"bar","name":"Bucks","marker":{"color":"rgba(69,55,129,1)","line":{"color":"rgba(69,55,129,1)"}},"textfont":{"color":"rgba(69,55,129,1)"},"error_y":{"color":"rgba(69,55,129,1)"},"error_x":{"color":"rgba(69,55,129,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Carbon"],"y":[44.755],"type":"bar","name":"Carbon","marker":{"color":"rgba(66,64,134,1)","line":{"color":"rgba(66,64,134,1)"}},"textfont":{"color":"rgba(66,64,134,1)"},"error_y":{"color":"rgba(66,64,134,1)"},"error_x":{"color":"rgba(66,64,134,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Centre"],"y":[45.09],"type":"bar","name":"Centre","marker":{"color":"rgba(62,73,137,1)","line":{"color":"rgba(62,73,137,1)"}},"textfont":{"color":"rgba(62,73,137,1)"},"error_y":{"color":"rgba(62,73,137,1)"},"error_x":{"color":"rgba(62,73,137,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Chester"],"y":[39.0622222222222],"type":"bar","name":"Chester","marker":{"color":"rgba(59,82,139,1)","line":{"color":"rgba(59,82,139,1)"}},"textfont":{"color":"rgba(59,82,139,1)"},"error_y":{"color":"rgba(59,82,139,1)"},"error_x":{"color":"rgba(59,82,139,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Clinton"],"y":[38.52],"type":"bar","name":"Clinton","marker":{"color":"rgba(55,91,141,1)","line":{"color":"rgba(55,91,141,1)"}},"textfont":{"color":"rgba(55,91,141,1)"},"error_y":{"color":"rgba(55,91,141,1)"},"error_x":{"color":"rgba(55,91,141,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Columbia"],"y":[70.71],"type":"bar","name":"Columbia","marker":{"color":"rgba(51,99,141,1)","line":{"color":"rgba(51,99,141,1)"}},"textfont":{"color":"rgba(51,99,141,1)"},"error_y":{"color":"rgba(51,99,141,1)"},"error_x":{"color":"rgba(51,99,141,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Crawford"],"y":[33.62],"type":"bar","name":"Crawford","marker":{"color":"rgba(47,107,142,1)","line":{"color":"rgba(47,107,142,1)"}},"textfont":{"color":"rgba(47,107,142,1)"},"error_y":{"color":"rgba(47,107,142,1)"},"error_x":{"color":"rgba(47,107,142,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Cumberland"],"y":[50],"type":"bar","name":"Cumberland","marker":{"color":"rgba(44,114,142,1)","line":{"color":"rgba(44,114,142,1)"}},"textfont":{"color":"rgba(44,114,142,1)"},"error_y":{"color":"rgba(44,114,142,1)"},"error_x":{"color":"rgba(44,114,142,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Delaware"],"y":[44.17],"type":"bar","name":"Delaware","marker":{"color":"rgba(41,122,142,1)","line":{"color":"rgba(41,122,142,1)"}},"textfont":{"color":"rgba(41,122,142,1)"},"error_y":{"color":"rgba(41,122,142,1)"},"error_x":{"color":"rgba(41,122,142,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Delaware, Philadelphia"],"y":[50],"type":"bar","name":"Delaware, Philadelphia","marker":{"color":"rgba(38,130,142,1)","line":{"color":"rgba(38,130,142,1)"}},"textfont":{"color":"rgba(38,130,142,1)"},"error_y":{"color":"rgba(38,130,142,1)"},"error_x":{"color":"rgba(38,130,142,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Erie"],"y":[44.1],"type":"bar","name":"Erie","marker":{"color":"rgba(35,137,142,1)","line":{"color":"rgba(35,137,142,1)"}},"textfont":{"color":"rgba(35,137,142,1)"},"error_y":{"color":"rgba(35,137,142,1)"},"error_x":{"color":"rgba(35,137,142,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Franklin"],"y":[35.86],"type":"bar","name":"Franklin","marker":{"color":"rgba(33,144,141,1)","line":{"color":"rgba(33,144,141,1)"}},"textfont":{"color":"rgba(33,144,141,1)"},"error_y":{"color":"rgba(33,144,141,1)"},"error_x":{"color":"rgba(33,144,141,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Jefferson"],"y":[30.22],"type":"bar","name":"Jefferson","marker":{"color":"rgba(31,151,139,1)","line":{"color":"rgba(31,151,139,1)"}},"textfont":{"color":"rgba(31,151,139,1)"},"error_y":{"color":"rgba(31,151,139,1)"},"error_x":{"color":"rgba(31,151,139,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Lancaster"],"y":[39.88],"type":"bar","name":"Lancaster","marker":{"color":"rgba(31,159,136,1)","line":{"color":"rgba(31,159,136,1)"}},"textfont":{"color":"rgba(31,159,136,1)"},"error_y":{"color":"rgba(31,159,136,1)"},"error_x":{"color":"rgba(31,159,136,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Lebanon"],"y":[46.25],"type":"bar","name":"Lebanon","marker":{"color":"rgba(33,166,133,1)","line":{"color":"rgba(33,166,133,1)"}},"textfont":{"color":"rgba(33,166,133,1)"},"error_y":{"color":"rgba(33,166,133,1)"},"error_x":{"color":"rgba(33,166,133,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Lehigh"],"y":[47.5133333333333],"type":"bar","name":"Lehigh","marker":{"color":"rgba(39,173,129,1)","line":{"color":"rgba(39,173,129,1)"}},"textfont":{"color":"rgba(39,173,129,1)"},"error_y":{"color":"rgba(39,173,129,1)"},"error_x":{"color":"rgba(39,173,129,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Luzerne"],"y":[43.16],"type":"bar","name":"Luzerne","marker":{"color":"rgba(49,181,123,1)","line":{"color":"rgba(49,181,123,1)"}},"textfont":{"color":"rgba(49,181,123,1)"},"error_y":{"color":"rgba(49,181,123,1)"},"error_x":{"color":"rgba(49,181,123,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Lycoming"],"y":[42.24],"type":"bar","name":"Lycoming","marker":{"color":"rgba(62,188,116,1)","line":{"color":"rgba(62,188,116,1)"}},"textfont":{"color":"rgba(62,188,116,1)"},"error_y":{"color":"rgba(62,188,116,1)"},"error_x":{"color":"rgba(62,188,116,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Mercer"],"y":[48.6433333333333],"type":"bar","name":"Mercer","marker":{"color":"rgba(77,194,108,1)","line":{"color":"rgba(77,194,108,1)"}},"textfont":{"color":"rgba(77,194,108,1)"},"error_y":{"color":"rgba(77,194,108,1)"},"error_x":{"color":"rgba(77,194,108,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Mifflin"],"y":[40.37],"type":"bar","name":"Mifflin","marker":{"color":"rgba(93,200,99,1)","line":{"color":"rgba(93,200,99,1)"}},"textfont":{"color":"rgba(93,200,99,1)"},"error_y":{"color":"rgba(93,200,99,1)"},"error_x":{"color":"rgba(93,200,99,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Monroe"],"y":[34.965],"type":"bar","name":"Monroe","marker":{"color":"rgba(110,206,88,1)","line":{"color":"rgba(110,206,88,1)"}},"textfont":{"color":"rgba(110,206,88,1)"},"error_y":{"color":"rgba(110,206,88,1)"},"error_x":{"color":"rgba(110,206,88,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Montgomery"],"y":[43.3594117647059],"type":"bar","name":"Montgomery","marker":{"color":"rgba(130,211,77,1)","line":{"color":"rgba(130,211,77,1)"}},"textfont":{"color":"rgba(130,211,77,1)"},"error_y":{"color":"rgba(130,211,77,1)"},"error_x":{"color":"rgba(130,211,77,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Montour"],"y":[46.44],"type":"bar","name":"Montour","marker":{"color":"rgba(149,216,64,1)","line":{"color":"rgba(149,216,64,1)"}},"textfont":{"color":"rgba(149,216,64,1)"},"error_y":{"color":"rgba(149,216,64,1)"},"error_x":{"color":"rgba(149,216,64,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Northampton"],"y":[47.19],"type":"bar","name":"Northampton","marker":{"color":"rgba(170,220,50,1)","line":{"color":"rgba(170,220,50,1)"}},"textfont":{"color":"rgba(170,220,50,1)"},"error_y":{"color":"rgba(170,220,50,1)"},"error_x":{"color":"rgba(170,220,50,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Philadelphia"],"y":[41.715],"type":"bar","name":"Philadelphia","marker":{"color":"rgba(192,223,37,1)","line":{"color":"rgba(192,223,37,1)"}},"textfont":{"color":"rgba(192,223,37,1)"},"error_y":{"color":"rgba(192,223,37,1)"},"error_x":{"color":"rgba(192,223,37,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Schuylkill"],"y":[31.02],"type":"bar","name":"Schuylkill","marker":{"color":"rgba(213,226,26,1)","line":{"color":"rgba(213,226,26,1)"}},"textfont":{"color":"rgba(213,226,26,1)"},"error_y":{"color":"rgba(213,226,26,1)"},"error_x":{"color":"rgba(213,226,26,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["Susquehanna"],"y":[33.74],"type":"bar","name":"Susquehanna","marker":{"color":"rgba(234,229,26,1)","line":{"color":"rgba(234,229,26,1)"}},"textfont":{"color":"rgba(234,229,26,1)"},"error_y":{"color":"rgba(234,229,26,1)"},"error_x":{"color":"rgba(234,229,26,1)"},"xaxis":"x","yaxis":"y","frame":null},{"x":["York"],"y":[36.29],"type":"bar","name":"York","marker":{"color":"rgba(253,231,37,1)","line":{"color":"rgba(253,231,37,1)"}},"textfont":{"color":"rgba(253,231,37,1)"},"error_y":{"color":"rgba(253,231,37,1)"},"error_x":{"color":"rgba(253,231,37,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.2,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<p><img src="Explanatory_Variables_files/figure-html/plot%202-1.png" width="672" /></p>
+<p><img src="Explanatory_Variables_files/figure-html/plot%203-1.png" width="672" /></p>
 
 
 
