--- a/Explanatory_Variables.html
+++ b/Explanatory_Variables.html
@@ -277,8 +277,9 @@ Outcomes</h1>
 </div>
 
 
-<p><img src="Explanatory_Variables_files/figure-html/plot%202-1.png" width="672" /></p>
-<p><img src="Explanatory_Variables_files/figure-html/plot%203-1.png" width="672" /></p>
+<p><img src="Explanatory_Variables_files/figure-html/plot%204-1.png" width="672" /></p>
+<p><img src="Explanatory_Variables_files/figure-html/plot%205-1.png" width="672" /></p>
+<p><img src="Explanatory_Variables_files/figure-html/plot%206-1.png" width="672" /><img src="Explanatory_Variables_files/figure-html/plot%206-2.png" width="672" /><img src="Explanatory_Variables_files/figure-html/plot%206-3.png" width="672" /><img src="Explanatory_Variables_files/figure-html/plot%206-4.png" width="672" /></p>
 
 
 
