Associations between Cancer and Predictors

--- a/Explanatory_Variables.html
+++ b/Explanatory_Variables.html
@@ -280,6 +280,7 @@ Outcomes</h1>
 <p><img src="Explanatory_Variables_files/figure-html/plot%204-1.png" width="672" /></p>
 <p><img src="Explanatory_Variables_files/figure-html/plot%205-1.png" width="672" /></p>
 <p><img src="Explanatory_Variables_files/figure-html/plot%206-1.png" width="672" /><img src="Explanatory_Variables_files/figure-html/plot%206-2.png" width="672" /><img src="Explanatory_Variables_files/figure-html/plot%206-3.png" width="672" /><img src="Explanatory_Variables_files/figure-html/plot%206-4.png" width="672" /></p>
+<p><img src="Explanatory_Variables_files/figure-html/plot%207-1.png" width="672" /><img src="Explanatory_Variables_files/figure-html/plot%207-2.png" width="672" /><img src="Explanatory_Variables_files/figure-html/plot%207-3.png" width="672" /><img src="Explanatory_Variables_files/figure-html/plot%207-4.png" width="672" /></p>
 
 
 
