--- a/asthma_regression.html
+++ b/asthma_regression.html
@@ -29,7 +29,11 @@
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
@@ -225,7 +229,73 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
+<style type="text/css">
+.code-folding-btn { margin-bottom: 4px; }
+</style>
 
+
+
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
 
 
 
@@ -235,6 +305,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -255,7 +335,13 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="data_cleaning.html">Data Cleaning</a>
+  <a href="Exploratory_Analysis.html">Exploratory Analysis</a>
+</li>
+<li>
+  <a href="asthma_regression.html">Asthma Regression</a>
+</li>
+<li>
+  <a href="cancer_regression.html">Cancer Regression</a>
 </li>
 <li>
   <a href="mailto:&lt;rh3064@cumc.columbia.edu&gt;">
@@ -275,6 +361,14 @@ $(document).ready(function () {
 </div><!--/.navbar -->
 
 <div id="header">
+
+<div class="btn-group pull-right float-right">
+<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
+<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
+<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
+</ul>
+</div>
 
 
 
@@ -441,14 +535,17 @@ combined_data_final=
           insurance_population = round((access2_crude_prev/100)*total_population),
           cancer_compared_national_average=if_else(cancer_crude_prev&gt;&#39;6.5&#39;, 1,0)
           )</code></pre>
-<p>##Outcome: asthma Prevalence</p>
+<div id="outcome-asthma-prevalence" class="section level2">
+<h2>Outcome: Asthma Prevalence</h2>
 <p>The data provided is at the state-level, however it was converted to
 county-level for the purpose of this model. We were originally given the
 The outcome of interest is the number of individuals with asthma in a 1
 year period by county differed by county.As this was count data, Poisson
 Regression with a log link function was utilized.No offset term was
 utilized in the data as count data is modeled.</p>
-<p>#Crude Model</p>
+</div>
+<div id="crude-model" class="section level1">
+<h1>Crude Model</h1>
 <p>We evaluated the cancer crude counts (total number of individuals who
 had asthma by county) with counties with larger urban centers having
 higher cancer counts Upon running the Poisson regression model with a
@@ -882,7 +979,9 @@ greatest occurring among Philadelphia county (RR: 18.468, 95% CI
 </tr>
 </tbody>
 </table>
-<p>#Confounder Selection:</p>
+</div>
+<div id="confounder-selection" class="section level1">
+<h1>Confounder Selection</h1>
 <p>We hypothesized this was a function of population size in urban
 cities. We also believed that the asthma counts may have had to do with
 potentially more toxic Superfund sites. Finally, we were interested in
@@ -1050,7 +1149,9 @@ was impacting this relationship.</p>
 </tr>
 </tbody>
 </table>
-<p>#Adjusted Analysis</p>
+</div>
+<div id="adjusted-analysis" class="section level1">
+<h1>Adjusted Analysis</h1>
 <p>After adjustment for these factors we find that our confounding
 factors (including the interaction term between Superfund_sites and
 county) are not significant, they do impact the county variables.
@@ -1590,7 +1691,9 @@ in our study.</p>
 </tr>
 </tbody>
 </table>
-<p>#Model Fit</p>
+</div>
+<div id="model-fit" class="section level1">
+<h1>Model Fit</h1>
 <p>We opted to investigate model fit through analyzing over dispersion.
 We did not find over dispersion to be an issue in our estimate.</p>
 <pre class="r"><code>  combined_data_final%&gt;% 
@@ -1613,16 +1716,21 @@ We did not find over dispersion to be an issue in our estimate.</p>
 </tr>
 </tbody>
 </table>
-<p>#Conclusion</p>
+</div>
+<div id="conclusion" class="section level1">
+<h1>Conclusion</h1>
 <p>Similarly to cancer regression we found that Superfund sites may not
 be a primary factor in the difference between cancer sites as our
 interaction term involving superfund sites and counties with cancer were
 found to be insignificant. This evidence suggests that there are other
 factors such as Socioeconomic Status that may be better Social
 Determinant of Health rather than purely environmental determinants.</p>
+</div>
 
 
 
+</div>
+</div>
 
 </div>
 
@@ -1654,7 +1762,41 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
+<script>
+$(document).ready(function () {
+  window.initializeCodeFolding("hide" === "show");
+});
+</script>
 
+<script>
+$(document).ready(function ()  {
+
+    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
+    $('.unlisted.unnumbered').addClass('toc-ignore')
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
