--- a/asthma_regression.html
+++ b/asthma_regression.html
@@ -378,10 +378,10 @@ div.tocify {
 
 
 <pre><code>## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
-## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
-## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
-## ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
-## ✔ readr   2.1.2      ✔ forcats 0.5.2 
+## ✔ ggplot2 3.3.6     ✔ purrr   0.3.4
+## ✔ tibble  3.1.8     ✔ dplyr   1.0.9
+## ✔ tidyr   1.2.0     ✔ stringr 1.4.1
+## ✔ readr   2.1.2     ✔ forcats 0.5.2
 ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()
@@ -404,12 +404,11 @@ div.tocify {
 ## 
 ## The following objects are masked from &#39;package:base&#39;:
 ## 
-##     date, intersect, setdiff, union
-## 
-## 
-## 
+##     date, intersect, setdiff, union</code></pre>
+<pre><code>## Warning: package &#39;splitstackshape&#39; was built under R version 4.2.2</code></pre>
+<pre><code>## Warning: package &#39;naniar&#39; was built under R version 4.2.2</code></pre>
+<pre><code>## 
 ## Attaching package: &#39;broom&#39;
-## 
 ## 
 ## The following object is masked from &#39;package:modelr&#39;:
 ## 
