home page complete

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 
 
-<title>Outgassing, Air Quality, &amp; Health Outcomes in Pennsylvania (1980-2020)</title>
+<title>SuperFund Sites and Health Outcomes in Pennsylvania</title>
 
-<script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.18/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/sandstone.min.css" rel="stylesheet" />
@@ -183,8 +183,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -192,16 +192,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -360,29 +353,95 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Outgassing, Air Quality, &amp; Health
-Outcomes in Pennsylvania (1980-2020)</h1>
+<h1 class="title toc-ignore">SuperFund Sites and Health Outcomes in
+Pennsylvania</h1>
 <h3 class="subtitle">Vanessa Dinh (vd2407), Rahul Hosalli (rh3064),
 Armaan Sodhi (as6447), Mindy Tran (mnt2130)</h3>
 
 </div>
 
 
-<div id="summary-video" class="section level2">
-<h2>Summary Video</h2>
+<p> </p>
+<p align="left">
+<img src="images/superfund.png" style="width:70%">
+</p>
+<p> </p>
+<style type="text/css">
+</style>
+<div id="motivation" class="section level2">
+<h2>Motivation</h2>
+<p>The motivation for this website stems from the fact that Superfund
+sites are areas designated by the EPA that are contaminated with
+hazardous or toxic substances and have potential to release these
+substances into the environment, adversely affecting human health. Thus,
+our group wanted to evaluate the health effects of living in proximity
+to a Superfund site, as <a
+href="https://housingmatters.urban.org/articles/millions-americans-live-near-toxic-waste-sites-how-does-affect-their-health">1
+in 6 Americans</a> currently live near a Superfund site. In particular,
+we are interested in the effects residing in a county with Superfund
+site on asthma and cancer outcomes, since risk for those two diseases
+can be influenced by environmental exposures.</p>
+<p> </p>
 </div>
-<div id="background" class="section level2">
-<h2>Background</h2>
-<p>Background on project</p>
+<div id="initial-questions" class="section level2">
+<h2>Initial Questions</h2>
+<ol style="list-style-type: decimal">
+<li>Does living in a county with a Superfund increase risk for
+cancer?</li>
+<li>Does living in a county with a Superfund increase risk for
+asthma?</li>
+<li>Does county level Superfund site score affect both cancer and asthma
+outcomes?</li>
+<li>What is the geographic spread of Superfund sites in
+Pennsylvania?</li>
+</ol>
+<p> </p>
 </div>
-<div id="data" class="section level2">
-<h2>Data</h2>
+<div id="website-overview" class="section level2">
+<h2>Website Overview</h2>
+<p>Data for this website was acquired from the CDC and EPA specifically
+for Superfund site location and health outcomes.</p>
+<strong>In the Exploratory Analysis tab, you will be able to
+access:</strong>
+<ul>
+<li>
+Analyses of the location, number, and site scores of Superfund sites in
+the state of Pennsylvania
+</li>
+<li>
+Analyses of health outcomes for our main health outcomes (cancer &amp;
+smoking) and our predictor variables (lack of health insurance, mean
+site score, smoking prevalence, and depression prevalence).
+</li>
+</ul>
+<strong>In the Regression Analyses tab, you will find:</strong>
+<ul>
+<li>
+Poisson Regression Model with log link function investigating
+associations between asthma and cancer case count and county, while
+controlling for smoking prevalence, prevalence of lack of health
+insurance, depression prevalence, and the average Superfund site score
+by county.
+</li>
+</ul>
+<p>   </p>
+<div id="collaborators" class="section level3">
+<h3>Collaborators:</h3>
+<ul>
+<li>
+<a href="https://mindytran96.github.io/">Mindy Tran</a>
+</li>
+<li>
+<a href="https://r-hosalli.github.io/">Rahul Hosalli</a>
+</li>
+<li>
+<a href="https://as6447.github.io/">Armaan Sodhi</a>
+</li>
+<li>
+<a href="https://vd24071.github.io/">Vannessa Dinh</a>
+</li>
+</ul>
 </div>
-<div id="site-guide" class="section level2">
-<h2>Site Guide</h2>
-</div>
-<div id="references" class="section level2">
-<h2>References</h2>
 </div>
 
 
