fixed error that created yml issues

--- a/index.html
+++ b/index.html
@@ -320,6 +320,9 @@ div.tocify {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
+        
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Exploratory Analyses
@@ -350,9 +353,8 @@ div.tocify {
     </li>
   </ul>
 </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li>
+<li class="dropdown-header">Interactive Maps</li>
+<li>
   <a href="Report.html">Report</a>
 </li>
 <li>
