--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ Pennsylvania?</li>
 <div id="website-overview" class="section level2">
 <h2>Website Overview</h2>
 <p>Data for this website was acquired from the CDC and EPA specifically
-for Superfund site location and health outcomes.</p>
+for Superfund site locations and health outcomes.</p>
 <strong>In the Exploratory Analysis tab, you will be able to
 access:</strong>
 <ul>
