--- a/asthma_regression.html
+++ b/asthma_regression.html
@@ -13,7 +13,7 @@
 
 <title>Asthma Regression</title>
 
-<script src="site_libs/header-attrs-2.18/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/sandstone.min.css" rel="stylesheet" />
@@ -184,8 +184,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "\e259";
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -193,9 +193,16 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "\e258";
-  font-family: 'Glyphicons Halflings';
+  content: "&#xe258;";
   border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -448,15 +455,15 @@ combined_data_final=
 <p>The data provided is at the state-level, however it was converted to
 county-level for the purpose of this model. We were originally given the
 The outcome of interest is the number of individuals with asthma in a 1
-year period by county differed by county.As this was count data, Poisson
-Regression with a log link function was utilized.No offset term was
-utilized in the data as count data is modeled.</p>
+year period by county differed by county. As this was count data,
+Poisson Regression with a log link function was utilized. No offset term
+was utilized in the data as count data is modeled.</p>
 </div>
 <div id="crude-model" class="section level1">
 <h1>Crude Model</h1>
 <p>We evaluated the cancer crude counts (total number of individuals who
 had asthma by county) with counties with larger urban centers having
-higher cancer counts Upon running the Poisson regression model with a
+higher cancer counts. Upon running the Poisson regression model with a
 log link function, we found increased asthma prevalence, with the
 greatest occurring among Philadelphia county (RR: 18.468, 95% CI
 (18.280, 18.658)).</p>
@@ -893,10 +900,10 @@ greatest occurring among Philadelphia county (RR: 18.468, 95% CI
 <p>We hypothesized this was a function of population size in urban
 cities. We also believed that the asthma counts may have had to do with
 potentially more toxic Superfund sites. Finally, we were interested in
-the potential for SES (IE access to insurance), behavioral factors like
-smoking, and health attributes like asthma could potentially confound
-our study.Therefore, we opted to explore whether county population size
-was impacting this relationship.</p>
+the potential for SES (i.e. access to insurance), behavioral factors
+like smoking, and health attributes like asthma could potentially
+confound our study.Therefore, we opted to explore whether county
+population size was impacting this relationship.</p>
 <p><code>Total Population</code></p>
 <pre class="r"><code>combined_data_final %&gt;% 
   glm(asthma_population ~total_population, data = .,family = poisson(link=&#39;log&#39;))%&gt;%
@@ -929,7 +936,7 @@ was impacting this relationship.</p>
 </tr>
 </tbody>
 </table>
-<p><code>superfund site score</code></p>
+<p><code>Superfund Site Score</code></p>
 <pre class="r"><code>combined_data_final %&gt;% 
   glm(asthma_population ~site_score, data = .,family = poisson(link=&#39;log&#39;))%&gt;%
   broom::tidy()%&gt;% 
@@ -993,7 +1000,7 @@ was impacting this relationship.</p>
 </tr>
 </tbody>
 </table>
-<p><code>Insurance_Status</code>,</p>
+<p><code>Insurance Status</code>,</p>
 <pre class="r"><code>  combined_data_final %&gt;% 
   glm(asthma_population ~ insurance_population, data = .,family = poisson(link=&#39;log&#39;))%&gt;%
   broom::tidy()%&gt;% 
@@ -1070,7 +1077,7 @@ impact our measurement of cancer by county. What makes this fascinating
 is that Fayette County does not have a Superfund site, furthering
 evidence that cancer counts may be due to outside factors not originally
 in our study.</p>
-<pre class="r"><code>  combined_data_final %&gt;% 
+<pre class="r"><code>combined_data_final %&gt;% 
   glm(asthma_population ~ total_population+insurance_population+depression_population+smoking_population+site_score*county, data = .,family = poisson(link = &#39;log&#39;))%&gt;%
   broom::tidy()%&gt;%
   mutate(
