--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 
 
-<title>SuperFund Sites and Health Outcomes in Pennsylvania</title>
+<title>Superfund Sites and Health Outcomes in Pennsylvania</title>
 
-<script src="site_libs/header-attrs-2.18/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/sandstone.min.css" rel="stylesheet" />
@@ -183,8 +183,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "\e259";
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -192,9 +192,16 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "\e258";
-  font-family: 'Glyphicons Halflings';
+  content: "&#xe258;";
   border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -374,7 +381,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">SuperFund Sites and Health Outcomes in
+<h1 class="title toc-ignore">Superfund Sites and Health Outcomes in
 Pennsylvania</h1>
 <h3 class="subtitle">Vanessa Dinh (vd2407), Rahul Hosalli (rh3064),
 Armaan Sodhi (as6447), Mindy Tran (mnt2130)</h3>
@@ -431,8 +438,8 @@ the state of Pennsylvania
 </li>
 <li>
 Analyses of health outcomes for our main health outcomes (cancer &amp;
-smoking) and our predictor variables (lack of health insurance, mean
-site score, smoking prevalence, and depression prevalence).
+asthma) and our predictor variables (lack of health insurance, mean site
+score, smoking prevalence, and depression prevalence).
 </li>
 </ul>
 <strong>In the Regression Analyses tab, you will find:</strong>
@@ -443,6 +450,23 @@ associations between asthma and cancer case count and county, while
 controlling for smoking prevalence, prevalence of lack of health
 insurance, depression prevalence, and the average Superfund site score
 by county.
+</li>
+</ul>
+<strong>In the Interactive Maps tab, there are:</strong>
+<ul>
+<li>
+Interactive maps depicting the prevalences of our main health outcomes
+(cancer &amp; smoking) in relation to geographic locations of current
+NPL Superfund sites in Pennsylvania, mapped by county.
+</li>
+</ul>
+<strong>In the Report tab, we have compiled:</strong>
+<ul>
+<li>
+A complete report of the data, exploratory analyses, and regression
+analyses with code, tables, graphs, and other figures to investigate the
+association between location of Superfund sites and the main health
+outcomes of interest: asthma and cancer in Pennsylvania.
 </li>
 </ul>
 <p>   </p>
