--- a/Cancer_regression.html
+++ b/Cancer_regression.html
@@ -896,7 +896,7 @@ greatest occurring among Allegheny county (RR: 10.759, 95% CI (10.636,
 </table>
 </div>
 <div id="confounder-selection" class="section level1">
-<h1>Confounder Selection:</h1>
+<h1>Confounder Selection</h1>
 <p>We hypothesized this was a function of population size in urban
 cities. We also believed that the cancer counts may have had to do with
 potentially more toxic superfund sites. Finally, we were interested in
