final push with screencast

--- a/index.html
+++ b/index.html
@@ -384,7 +384,9 @@ Armaan Sodhi (as6447), Mindy Tran (mnt2130)</h3>
 
 <p> </p>
 <p align="left">
-<img src="images/superfund.png" style="width:70%">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0HJo-mKRAs0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<p><img src="images/superfund.png" style="width:70%"/></p>
 </p>
 <p> </p>
 <style type="text/css">
@@ -422,8 +424,8 @@ Pennsylvania?</li>
 <h2>Website Overview</h2>
 <p>Data for this website was acquired from the CDC and EPA specifically
 for Superfund site locations and health outcomes.</p>
-<strong>In the Exploratory Analysis tab, you will be able to
-access:</strong>
+<p><strong>In the Exploratory Analysis tab, you will be able to
+access:</strong></p>
 <ul>
 <li>
 Analyses of the location, number, and site scores of Superfund sites in
@@ -435,7 +437,7 @@ asthma) and our predictor variables (lack of health insurance, mean site
 score, smoking prevalence, and depression prevalence).
 </li>
 </ul>
-<strong>In the Regression Analyses tab, you will find:</strong>
+<p><strong>In the Regression Analyses tab, you will find:</strong></p>
 <ul>
 <li>
 Poisson Regression Model with log link function investigating
@@ -445,7 +447,7 @@ insurance, depression prevalence, and the average Superfund site score
 by county.
 </li>
 </ul>
-<strong>In the Interactive Maps tab, there are:</strong>
+<p><strong>In the Interactive Maps tab, there are:</strong></p>
 <ul>
 <li>
 Interactive maps depicting the prevalences of our main health outcomes
@@ -453,7 +455,7 @@ Interactive maps depicting the prevalences of our main health outcomes
 NPL Superfund sites in Pennsylvania, mapped by county.
 </li>
 </ul>
-<strong>In the Report tab, we have compiled:</strong>
+<p><strong>In the Report tab, we have compiled:</strong></p>
 <ul>
 <li>
 A complete report of the data, exploratory analyses, and regression
